Test the entire string